--- a/assets/styles/components/_shared.scss
+++ b/assets/styles/components/_shared.scss
@@ -143,7 +143,9 @@ h3.divot {
   i {
     display: block;
     border-top: 1px solid color(pink);
-    margin-bottom: 29px;
+    + i {
+      margin-top: 29px;
+    }
     opacity: 0;
     will-change: opacity;
   }
@@ -153,8 +155,8 @@ h3.divot {
       animation-fill-mode: forwards;
     }
   }
-  &.-large i {
-    margin-bottom: 59px;
+  &.-large i + i {
+    margin-top: 59px;
   }
   &.-yellow i {
     border-color: color(yellow);
